k8s/kitties-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitties
  labels:
    app: kitties
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitties
  template:
    metadata:
      labels:
        app: kitties
    spec:
      containers:
        - name: kitties
          image: ghcr.io/lucidreline/kitties:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-creds
