k8s/kitties-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitties
spec:
  selector:
    app: kitties
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
