k8s/kitties-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitties
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cats.mancas.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kitties
                port:
                  number: 80
